# fgdm

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: ci.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: archictecture.md  architecture.md  architecture.mmd  demo.md  release-checklist.md
examples/: run_demo.sh
src/fgdm/: __init__.py
src/fgdm/application/: demo_data.py  dto.py  monitoring_service.py
src/fgdm/domain/: drift.py  errors.py  governance.py  metrics.py  models.py  rolling.py  validation.py  validation_models.py
src/fgdm/infraestructure/: cli.py
src/fgdm/infraestructure/reporting/: json_reporter.py  markdown_reporter.py
src/fgdm/infrastructure/: cli.py  demo_writer.py  generate_demo.py  io.py
src/fgdm/infrastructure/reporting/: json_reporter.py  markdown_reporter.py
tests/: test_cli.py  test_demo_data.py  test_drift.py  test_governance_policy.py  test_io.py  test_json_normalization.py  test_markdown_reporter.py  test_metrics.py  test_rolling.py  test_smoke_imports.py  test_validation_rules.py
