[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgdm"
version = "0.1.0"
description = "Forecast Governance & Drift Monitoring micro-framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU Affero General Public License v3.0" }
authors = [
  { name = "Victor Rodrigues" }
]
keywords = [
  "forecasting",
  "monitoring",
  "drift-detection",
  "mlops",
  "observability",
  "governance",
  "time-series",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.10",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.7",
  "ruff>=0.4",
]

[project.scripts]
fgdm = "fgdm.infrastructure.cli:main"
fgdm-demo-data = "fgdm.infrastructure.generate_demo:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "pyarrow",
  "pyarrow.*",
  "scipy",
  "scipy.*",
]
ignore_missing_imports = true